# Aegis-CAD

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: build-and-package.yml  quality.yml
docs/: backend_placeholders.md  build_audit.md  repo-audit-2024-04-27.md  scripting.md
examples/: aircraft_fuselage.aegisproj  armor_hull_turret.aegisproj  car_chassis.aegisproj  ship_deck.aegisproj  wing_panel.aegisproj
installer/: aegiscad.iss
resources/: aegiscad.qrc  ai_rules.json
resources/examples/: sample_part.stp
scripts/: ai_optimize.py  run_analysis.py  sample_analysis.py  sample_geometry.py
src/ai/: AegisAIEngine.cpp  AegisAIEngine.h  AegisReverseEngine.cpp  AegisReverseEngine.h  ReverseEngineerDock.cpp  ReverseEngineerDock.h
src/ai/rules/: README.txt
src/analysis/: AnalysisManager.cpp  AnalysisManager.h  AnalysisTypes.h  BackendFEA_CalculiX.cpp  BackendFEA_CalculiX.h  DomainTemplates.cpp  DomainTemplates.h
src/app/: AegisApp.cpp  AegisApp.h  MainWindow.cpp  MainWindow.h  ProjectIO.cpp  ProjectIO.h  main.cpp
src/assembly/: AssemblyDocument.cpp  AssemblyDocument.h  AssemblyNode.cpp  AssemblyNode.h  AssemblyViewer.cpp  AssemblyViewer.h  ConstraintSolverAsm.cpp  ConstraintSolverAsm.h  JointAnimator.cpp  JointAnimator.h  JointTypes.cpp  JointTypes.h  Mates.cpp  Mates.h  MotionManagerPanel.cpp  MotionManagerPanel.h  TransformGraph.cpp  TransformGraph.h
src/cad/: FeatureOps.cpp  FeatureOps.h  FeatureTree.cpp  FeatureTree.h  GltfExporter.cpp  GltfExporter.h  NodeSpatialIndex.cpp  NodeSpatialIndex.h  PartRegistry.cpp  PartRegistry.h  SketchDocument.cpp  SketchDocument.h  SketchEngine.cpp  SketchEngine.h  SketchSolver.cpp  SketchSolver.h  StepIgesIO.cpp  StepIgesIO.h
src/cam/: CamManager.cpp  CamManager.h  GCodeExport.cpp  GCodeExport.h  PostProcessor.h  ToolLibrary.cpp  ToolLibrary.h  ToolpathGenerator.cpp  ToolpathGenerator.h
src/drafting/: Annotations.cpp  Annotations.h  BlueprintExporter.cpp  BlueprintExporter.h  Dimensioning.cpp  Dimensioning.h  DrawingDocument.cpp  DrawingDocument.h  HiddenLineRemoval.cpp  HiddenLineRemoval.h  PdfExporter2D.cpp  PdfExporter2D.h  SymbolLibrary.cpp  SymbolLibrary.h  TitleBlock.cpp  TitleBlock.h  ViewProjection.h
src/perf/: AssemblyPerfProfiler.cpp  AssemblyPerfProfiler.h  SceneLODManager.cpp  SceneLODManager.h
src/scripting/: AegisAIFacade.cpp  AegisAIFacade.h  AegisModelFacade.cpp  AegisModelFacade.h  AegisPyBridge.cpp  AegisPyBridge.h  AnalysisFacade.cpp  AnalysisFacade.h  PyBindings.cpp  PyBindings.h  PythonBindings.cpp  ScriptRunner.cpp  ScriptRunner.h
src/ui/: AegisAssistantDock.cpp  AegisAssistantDock.h  AnalysisCaseDock.cpp  AnalysisCaseDock.h  AnalysisLegendOverlay.cpp  AnalysisLegendOverlay.h  AssemblyViewer.cpp  AssemblyViewer.h  CamDock.cpp  CamDock.h  IconLoader.h  LogConsoleDock.cpp  LogConsoleDock.h  ModernStyle.cpp  ModernStyle.h  OccView.cpp  OccView.h  PerformanceProfilerDock.cpp  PerformanceProfilerDock.h  PythonConsoleDock.cpp  PythonConsoleDock.h  ReverseEngineerDock.cpp  ReverseEngineerDock.h
src/ui/modern/: ModernStyle.cpp  ModernStyle.h  RibbonBar.cpp  RibbonBar.h
src/utils/: JsonHelpers.cpp  JsonHelpers.h  Logging.cpp  Logging.h  Settings.cpp  Settings.h
tests/: CMakeLists.txt  CoreTests.cpp
tools/: reverse_agent.py
